--- a/agricultura urbana.html
+++ b/agricultura urbana.html
@@ -67,7 +67,7 @@
          <h1>Agricultura urbana</h1>
            <main>
            
-         <section class="topico">
+         <div class="container-fluid">
             <h2>O que é ?</h2>
                 <article>
                <p>
@@ -76,9 +76,9 @@
                sustentabilidade ou segurança alimentar.
                 </p>
                 </article>
-            </section>
+            </div>
 
-             <section class="topico">
+             <div class="container-fluid">
             <h2>Espaço</h2>
                 <article>
                <p>
@@ -86,8 +86,8 @@
               varandas, terrenos baldios em perímetro urbano.
                 </p>
                 </article>
-            </section>
-             <section class="topico">
+            </div>
+             <div class="container-fluid">
             <h2>Objetivo</h2>
                 <article>
                <p>
@@ -95,17 +95,17 @@
                , utilizada para consumo próprio ou venda para a geração de renda.
                 </p>
                 </article>
-            </section>
+            </div>
             
-            <section class="topico">
+            <div class="container-fluid">
                  <h2>Com objetivo de:</h2>
                 <article>
                    <li>Segurança alimentar </li>
                    <li>Redução do impacto ambiental </li>
                    <li>Geração de renda</li>
                    <li>Melhor qualidade de vida </li>
-            </section>
-            <section class="topico">
+                </div>
+            <div class="container-fluid">
                 <h4>Segurança alimentar</h4>
                 <article>
                   <p>
@@ -113,8 +113,8 @@
                   população, e que todos tenham acesso.
                   </p>
                 </article>
-            </section>
-             <section class="topico">
+            </div>
+             <div class="container-fluid">
                 <h4>Redução do impacto ambiental </h4>
                 <article>
                   <p>
@@ -122,8 +122,8 @@
                  água, poluição e desenvolvimento de modo sustentável.
                   </p>
                 </article>
-            </section>
-             <section class="topico">
+            </div>
+             <div class="container-fluid">
                 <h4>Geração de renda </h4>
                 <article>
                   <p>
@@ -131,8 +131,8 @@
                  sabemos que é de qualidade.
                   </p>
                 </article>
-            </section>
-             <section class="topico">
+            </div>
+             <div class="container-fluid">
                 <h4>Melhor qualidade de vida</h4>
                 <article>
                   <p>
@@ -140,9 +140,9 @@
                   a nós mesmos.
                   </p>
                 </article>
-            </section>
+            </div>
 
-             <section class="topico">
+             <div class="container-fluid">
             <h2>Importância</h2>
                 <article>
                <p>
@@ -150,7 +150,7 @@
               qualidade de vida tendo um papel importante na construção de cidades mais sustentável.
                 </p>
                 </article>
-            </section>
+            </div>
             </main>
 
 
